@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-10T08:23:06Z",
-  "count_outdated" : 818,
-  "uniques_outdated" : 511,
-  "count" : 883,
-  "uniques" : 552,
+  "timestamp" : "2023-07-10T16:24:21Z",
+  "count_outdated" : 819,
+  "uniques_outdated" : 512,
+  "count" : 885,
+  "uniques" : 553,
   "clones" : [
-    {
-      "timestamp": "2023-06-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-27T00:00:00Z",
       "count": 4,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2023-07-10T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "count_decinc": [ 0, 9 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 6 ],
-      "uniques_decinc": [ 0, 6 ]
+      "count": 11,
+      "count_minmax": [ 9, 11 ],
+      "count_decinc": [ 0, 11 ],
+      "uniques": 7,
+      "uniques_minmax": [ 6, 7 ],
+      "uniques_decinc": [ 0, 7 ]
     }
   ]
 }
