@@ -1,12 +1,7 @@
 {
-  "count": 65,
+  "count": 66,
   "uniques": 21,
   "clones": [
-    {
-      "timestamp": "2023-06-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-06-27T00:00:00Z",
       "count": 4,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2023-07-10T00:00:00Z",
-      "count": 9,
-      "uniques": 6
+      "count": 11,
+      "uniques": 7
     }
   ]
 }
