@@ -1,3 +1,12 @@
+2023-07-10T16:24:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5510511617 # 977
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
+* notice: last 14d: unq all: 21 66
+* notice: prev accum: outdated-unq outdated-all / unq all: 511 818 / 552 883
+* notice: next accum: outdated-unq outdated-all / unq all: 512 819 / 553 885
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +7 +11 -0 -0 / 7 11
+* notice: removed / changed dates: [2023-06-26] / [2023-07-10]
+
 2023-07-10T08:23:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5505772292 # 976
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
